ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/generatorOverloads2/input.ts.stderr
error[1222]: Generators are not allowed in an ambient context.
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/generatorOverloads2/input.ts:3:13
  |
3 |     function* f(s: string): Iterable<any>;
  |             ^

error[1222]: Generators are not allowed in an ambient context.
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/generatorOverloads2/input.ts:4:13
  |
4 |     function* f(s: number): Iterable<any>;
  |             ^

error[1222]: Generators are not allowed in an ambient context.
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/generatorOverloads2/input.ts:5:13
  |
5 |     function* f(s: any): Iterable<any>;
  |             ^

